--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
 
    
-<div id="secondDiv">
+<div id="secondDiv" >
 <div style="width: 25%;text-align: left;padding-left: 30px;font-style: italic;color: #0884cc;">
     <h1>SKillman</h1>
 </div>
@@ -60,7 +60,7 @@
    <p> Join us today to showcase your skills to the world and chat with other skilled professionals in real time. It's a great way to connect and discover opportunities. Sign up now and let Skillman be your platform to shine!
   </p></div>
 
-    <div><video src="images/vecteezy_solar-panel-green-or-renewable-energy-business-concept_33858281.mp4" autoplay loop></video></div>
+    <div id="vida"><video src="images/vecteezy_solar-panel-green-or-renewable-energy-business-concept_33858281.mp4" autoplay loop></video></div>
   </div>
 
 
@@ -73,31 +73,31 @@
 </div>
 
 <div id="homeServices">
-<a href="inspection.html">
+<a>
   <div class="image-container">
-  <img src="images/skilled.jpg" alt="">
+  <img src="images/image.webp" alt="">
   <div style="padding: 10px 20px 20px;"><h1>Share videos</h1> 
 <p>On skillman you can showcase your skills and share your craft with other professionals</p>
 </div>
  
 </div></a>
 
-<a href="testing.html"><div class="image-container">
-  <img src="images/skilled.jpg" alt="">
+<a ><div class="image-container">
+  <img src="images/image1.jpg" alt="" >
   <div style="padding: 10px 20px 20px;"><h1>Interact</h1> 
 <p>You can connect, engage, and thrive through real-time interactions with other professionals</p>
 </div>
  </div></a>
 
-<a href="NDT_Training.html"><div class="image-container">
-  <img src="images/skilled.jpg" alt="">
+<a ><div class="image-container">
+  <img src="images/hired.jpg" alt="">
 <div style="padding: 10px 20px 20px;"> <h1>Get booked</h1>
 <p>You can unlock opportunities, get booked, and showcase your expertise professionally</p>
 </div>
 </div></a>
 
-<a href="specialized_Services.html"><div class="image-container">
-  <img src="images/skilled.jpg" alt="">
+<a ><div class="image-container">
+  <img src="images/book.jpg" alt="">
   <div style="padding: 10px 20px 20px;"> 
   <h1>Book a skilled professional</h1>
    <p>You can hire excellence by booking a skilled professional for your needs on skillman</p>
@@ -119,7 +119,7 @@
   <button><a href="signup.html" style="color: #fff;text-decoration: none;">SIGN UP</a></button>
 </div>
   <div id="innerbox2">
-    <img src="images/skilled.jpg" alt=""  >
+    <img src="images/welder.avif" alt=""  >
   </div>
 </div>
 </div>
@@ -134,13 +134,12 @@
 </div>
 
 <div id="flag-container">
-  <h2 style="text-align: center;color: #0884cc;">Showcase your skills!</h2>
   <div id="flagger">
     <div class="flag-container-inner"></div>
   </div>
   <script>
     
-const countryFlags = ['images/shell.png', 'images/strides.png', 'images/agip.png', 'images/alcon.png', 'images/mobil.png', 'images/nnpc.png'];
+const countryFlags = ['images/pic1.jpeg', 'images/pic9.jpeg', 'images/pic3.jpeg', 'images/pic4.jpeg', 'images/pic8.jpeg', 'images/pic6.jpeg'];
 
 const flagContainerInner = document.querySelector('.flag-container-inner');
 
